@@ -1,108 +1,180 @@
+experiment= class=SobolIndicesExperiment name=Unnamed experiment=class=MonteCarloExperiment name=Unnamed distribution=class=Normal name=Normal dimension=2 mean=class=Point name=Unnamed dimension=2 values=[0,0] sigma=class=Point name=Unnamed dimension=2 values=[1,1] correlationMatrix=class=CorrelationMatrix dimension=2 implementation=class=MatrixImplementation name=Unnamed rows=2 columns=2 values=[1,0,0,1] size=8 computeSecondOrder=false size=32
+sample=      [ X0         X1         ]
+ 0 : [  0.608202  -1.26617   ]
+ 1 : [ -0.438266   1.20548   ]
+ 2 : [ -2.18139    0.350042  ]
+ 3 : [ -0.355007   1.43725   ]
+ 4 : [  0.810668   0.793156  ]
+ 5 : [ -0.470526   0.261018  ]
+ 6 : [ -2.29006   -1.28289   ]
+ 7 : [ -1.31178   -0.0907838 ]
+ 8 : [  0.995793  -0.139453  ]
+ 9 : [ -0.560206   0.44549   ]
+10 : [  0.322925   0.445785  ]
+11 : [ -1.03808   -0.856712  ]
+12 : [  0.473617  -0.125498  ]
+13 : [  0.351418   1.78236   ]
+14 : [  0.0702074 -0.781366  ]
+15 : [ -0.721533  -0.241223  ]
+16 : [  0.995793  -1.26617   ]
+17 : [ -0.560206   1.20548   ]
+18 : [  0.322925   0.350042  ]
+19 : [ -1.03808    1.43725   ]
+20 : [  0.473617   0.793156  ]
+21 : [  0.351418   0.261018  ]
+22 : [  0.0702074 -1.28289   ]
+23 : [ -0.721533  -0.0907838 ]
+24 : [  0.608202  -0.139453  ]
+25 : [ -0.438266   0.44549   ]
+26 : [ -2.18139    0.445785  ]
+27 : [ -0.355007  -0.856712  ]
+28 : [  0.810668  -0.125498  ]
+29 : [ -0.470526   1.78236   ]
+30 : [ -2.29006   -0.781366  ]
+31 : [ -1.31178   -0.241223  ]
+size= 32
+experiment= class=SobolIndicesExperiment name=Unnamed experiment=class=MonteCarloExperiment name=Unnamed distribution=class=Normal name=Normal dimension=2 mean=class=Point name=Unnamed dimension=2 values=[0,0] sigma=class=Point name=Unnamed dimension=2 values=[1,1] correlationMatrix=class=CorrelationMatrix dimension=2 implementation=class=MatrixImplementation name=Unnamed rows=2 columns=2 values=[1,0,0,1] size=8 computeSecondOrder=true size=32
+sample=      [ X0         X1         ]
+ 0 : [ -1.78796    0.40136   ]
+ 1 : [  1.36783    1.00434   ]
+ 2 : [  0.741548  -0.0436123 ]
+ 3 : [  0.539345   0.29995   ]
+ 4 : [  0.407717  -0.485112  ]
+ 5 : [ -0.382992  -0.752817  ]
+ 6 : [  0.257926   1.96876   ]
+ 7 : [ -0.671291   1.85579   ]
+ 8 : [  0.0521593  0.790446  ]
+ 9 : [  0.716353  -0.743622  ]
+10 : [  0.184356  -1.53073   ]
+11 : [  0.655027   0.538071  ]
+12 : [  1.73821   -0.958722  ]
+13 : [  0.377922  -0.181004  ]
+14 : [  1.67297   -1.03896   ]
+15 : [ -0.353552   1.21381   ]
+16 : [  0.0521593  0.40136   ]
+17 : [  0.716353   1.00434   ]
+18 : [  0.184356  -0.0436123 ]
+19 : [  0.655027   0.29995   ]
+20 : [  1.73821   -0.485112  ]
+21 : [  0.377922  -0.752817  ]
+22 : [  1.67297    1.96876   ]
+23 : [ -0.353552   1.85579   ]
+24 : [ -1.78796    0.790446  ]
+25 : [  1.36783   -0.743622  ]
+26 : [  0.741548  -1.53073   ]
+27 : [  0.539345   0.538071  ]
+28 : [  0.407717  -0.958722  ]
+29 : [ -0.382992  -0.181004  ]
+30 : [  0.257926  -1.03896   ]
+31 : [ -0.671291   1.21381   ]
+size= 32
 experiment= class=SobolIndicesExperiment name=Unnamed experiment=class=MonteCarloExperiment name=Unnamed distribution=class=Normal name=Normal dimension=3 mean=class=Point name=Unnamed dimension=3 values=[0,0,0] sigma=class=Point name=Unnamed dimension=3 values=[1,1,1] correlationMatrix=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0,0,0,1,0,0,0,1] size=8 computeSecondOrder=false size=40
 sample=      [ X0         X1         X2         ]
- 0 : [  0.608202  -1.26617   -0.438266  ]
- 1 : [  1.20548   -2.18139    0.350042  ]
- 2 : [ -0.355007   1.43725    0.810668  ]
- 3 : [  0.793156  -0.470526   0.261018  ]
- 4 : [ -2.29006   -1.28289   -1.31178   ]
- 5 : [ -0.0907838  0.995793  -0.139453  ]
- 6 : [ -0.560206   0.44549    0.322925  ]
- 7 : [  0.445785  -1.03808   -0.856712  ]
- 8 : [  0.473617  -0.125498   0.351418  ]
- 9 : [  1.78236    0.0702074 -0.781366  ]
-10 : [ -0.721533  -0.241223  -1.78796   ]
-11 : [  0.40136    1.36783    1.00434   ]
-12 : [  0.741548  -0.0436123  0.539345  ]
-13 : [  0.29995    0.407717  -0.485112  ]
-14 : [ -0.382992  -0.752817   0.257926  ]
-15 : [  1.96876   -0.671291   1.85579   ]
-16 : [  0.473617  -1.26617   -0.438266  ]
-17 : [  1.78236   -2.18139    0.350042  ]
-18 : [ -0.721533   1.43725    0.810668  ]
-19 : [  0.40136   -0.470526   0.261018  ]
-20 : [  0.741548  -1.28289   -1.31178   ]
-21 : [  0.29995    0.995793  -0.139453  ]
-22 : [ -0.382992   0.44549    0.322925  ]
-23 : [  1.96876   -1.03808   -0.856712  ]
-24 : [  0.608202  -0.125498  -0.438266  ]
-25 : [  1.20548    0.0702074  0.350042  ]
-26 : [ -0.355007  -0.241223   0.810668  ]
-27 : [  0.793156   1.36783    0.261018  ]
-28 : [ -2.29006   -0.0436123 -1.31178   ]
-29 : [ -0.0907838  0.407717  -0.139453  ]
-30 : [ -0.560206  -0.752817   0.322925  ]
-31 : [  0.445785  -0.671291  -0.856712  ]
-32 : [  0.608202  -1.26617    0.351418  ]
-33 : [  1.20548   -2.18139   -0.781366  ]
-34 : [ -0.355007   1.43725   -1.78796   ]
-35 : [  0.793156  -0.470526   1.00434   ]
-36 : [ -2.29006   -1.28289    0.539345  ]
-37 : [ -0.0907838  0.995793  -0.485112  ]
-38 : [ -0.560206   0.44549    0.257926  ]
-39 : [  0.445785  -1.03808    1.85579   ]
+ 0 : [ -0.777033  -1.36853    0.103474  ]
+ 1 : [ -0.89182    0.905602   0.334794  ]
+ 2 : [ -0.483642   0.677958   1.70938   ]
+ 3 : [  1.07062   -0.506925  -1.66086   ]
+ 4 : [  2.24623    0.759602  -0.510764  ]
+ 5 : [ -0.633066  -0.957072   0.544047  ]
+ 6 : [  0.814561  -0.734708  -0.111461  ]
+ 7 : [  0.994482  -0.160625  -0.938771  ]
+ 8 : [ -1.96869   -0.657603   0.338751  ]
+ 9 : [  1.01556    0.637167  -0.0899071 ]
+10 : [ -0.855886   1.27128   -0.238253  ]
+11 : [  1.3263     2.11968   -0.901581  ]
+12 : [ -1.51696   -1.29938    0.230372  ]
+13 : [ -3.09737    0.01323   -1.25743   ]
+14 : [  1.02776   -0.766431   0.217512  ]
+15 : [  1.04533    0.331569  -0.488205  ]
+16 : [ -1.96869   -1.36853    0.103474  ]
+17 : [  1.01556    0.905602   0.334794  ]
+18 : [ -0.855886   0.677958   1.70938   ]
+19 : [  1.3263    -0.506925  -1.66086   ]
+20 : [ -1.51696    0.759602  -0.510764  ]
+21 : [ -3.09737   -0.957072   0.544047  ]
+22 : [  1.02776   -0.734708  -0.111461  ]
+23 : [  1.04533   -0.160625  -0.938771  ]
+24 : [ -0.777033  -0.657603   0.103474  ]
+25 : [ -0.89182    0.637167   0.334794  ]
+26 : [ -0.483642   1.27128    1.70938   ]
+27 : [  1.07062    2.11968   -1.66086   ]
+28 : [  2.24623   -1.29938   -0.510764  ]
+29 : [ -0.633066   0.01323    0.544047  ]
+30 : [  0.814561  -0.766431  -0.111461  ]
+31 : [  0.994482   0.331569  -0.938771  ]
+32 : [ -0.777033  -1.36853    0.338751  ]
+33 : [ -0.89182    0.905602  -0.0899071 ]
+34 : [ -0.483642   0.677958  -0.238253  ]
+35 : [  1.07062   -0.506925  -0.901581  ]
+36 : [  2.24623    0.759602   0.230372  ]
+37 : [ -0.633066  -0.957072  -1.25743   ]
+38 : [  0.814561  -0.734708   0.217512  ]
+39 : [  0.994482  -0.160625  -0.488205  ]
+size= 40
 experiment= class=SobolIndicesExperiment name=Unnamed experiment=class=MonteCarloExperiment name=Unnamed distribution=class=Normal name=Normal dimension=3 mean=class=Point name=Unnamed dimension=3 values=[0,0,0] sigma=class=Point name=Unnamed dimension=3 values=[1,1,1] correlationMatrix=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0,0,0,1,0,0,0,1] size=8 computeSecondOrder=true size=64
-sample=      [ X0         X1         X2         ]
- 0 : [  0.0521593  0.790446   0.716353  ]
- 1 : [ -0.743622   0.184356  -1.53073   ]
- 2 : [  0.655027   0.538071   1.73821   ]
- 3 : [ -0.958722   0.377922  -0.181004  ]
- 4 : [  1.67297   -1.03896   -0.353552  ]
- 5 : [  1.21381   -0.777033  -1.36853   ]
- 6 : [  0.103474  -0.89182    0.905602  ]
- 7 : [  0.334794  -0.483642   0.677958  ]
- 8 : [  1.70938    1.07062   -0.506925  ]
- 9 : [ -1.66086    2.24623    0.759602  ]
-10 : [ -0.510764  -0.633066  -0.957072  ]
-11 : [  0.544047   0.814561  -0.734708  ]
-12 : [ -0.111461   0.994482  -0.160625  ]
-13 : [ -0.938771  -1.96869   -0.657603  ]
-14 : [  0.338751   1.01556    0.637167  ]
-15 : [ -0.0899071 -0.855886   1.27128   ]
-16 : [  1.70938    0.790446   0.716353  ]
-17 : [ -1.66086    0.184356  -1.53073   ]
-18 : [ -0.510764   0.538071   1.73821   ]
-19 : [  0.544047   0.377922  -0.181004  ]
-20 : [ -0.111461  -1.03896   -0.353552  ]
-21 : [ -0.938771  -0.777033  -1.36853   ]
-22 : [  0.338751  -0.89182    0.905602  ]
-23 : [ -0.0899071 -0.483642   0.677958  ]
-24 : [  0.0521593  1.07062    0.716353  ]
-25 : [ -0.743622   2.24623   -1.53073   ]
-26 : [  0.655027  -0.633066   1.73821   ]
-27 : [ -0.958722   0.814561  -0.181004  ]
-28 : [  1.67297    0.994482  -0.353552  ]
-29 : [  1.21381   -1.96869   -1.36853   ]
-30 : [  0.103474   1.01556    0.905602  ]
-31 : [  0.334794  -0.855886   0.677958  ]
-32 : [  0.0521593  0.790446  -0.506925  ]
-33 : [ -0.743622   0.184356   0.759602  ]
-34 : [  0.655027   0.538071  -0.957072  ]
-35 : [ -0.958722   0.377922  -0.734708  ]
-36 : [  1.67297   -1.03896   -0.160625  ]
-37 : [  1.21381   -0.777033  -0.657603  ]
-38 : [  0.103474  -0.89182    0.637167  ]
-39 : [  0.334794  -0.483642   1.27128   ]
-40 : [  0.0521593  1.07062   -0.506925  ]
-41 : [ -0.743622   2.24623    0.759602  ]
-42 : [  0.655027  -0.633066  -0.957072  ]
-43 : [ -0.958722   0.814561  -0.734708  ]
-44 : [  1.67297    0.994482  -0.160625  ]
-45 : [  1.21381   -1.96869   -0.657603  ]
-46 : [  0.103474   1.01556    0.637167  ]
-47 : [  0.334794  -0.855886   1.27128   ]
-48 : [  1.70938    0.790446  -0.506925  ]
-49 : [ -1.66086    0.184356   0.759602  ]
-50 : [ -0.510764   0.538071  -0.957072  ]
-51 : [  0.544047   0.377922  -0.734708  ]
-52 : [ -0.111461  -1.03896   -0.160625  ]
-53 : [ -0.938771  -0.777033  -0.657603  ]
-54 : [  0.338751  -0.89182    0.637167  ]
-55 : [ -0.0899071 -0.483642   1.27128   ]
-56 : [  1.70938    1.07062    0.716353  ]
-57 : [ -1.66086    2.24623   -1.53073   ]
-58 : [ -0.510764  -0.633066   1.73821   ]
-59 : [  0.544047   0.814561  -0.181004  ]
-60 : [ -0.111461   0.994482  -0.353552  ]
-61 : [ -0.938771  -1.96869   -1.36853   ]
-62 : [  0.338751   1.01556    0.905602  ]
-63 : [ -0.0899071 -0.855886   0.677958  ]
+sample=      [ X0          X1          X2          ]
+ 0 : [ -0.465482    0.332084   -0.167726   ]
+ 1 : [  3.01263     0.94204     0.61189    ]
+ 2 : [  0.611715   -1.5375     -2.4067     ]
+ 3 : [  0.662936   -0.65616    -0.751611   ]
+ 4 : [  0.438177   -0.455335    1.86038    ]
+ 5 : [  0.219721    1.72546    -0.543405   ]
+ 6 : [ -0.736749   -0.508206   -2.25867    ]
+ 7 : [ -0.5964     -0.31468    -1.78274    ]
+ 8 : [ -0.684734    0.0611157   0.87372    ]
+ 9 : [ -1.46295    -0.318786    1.26314    ]
+10 : [ -0.426726   -1.89234    -0.514391   ]
+11 : [  0.647229    0.00370249  0.729688   ]
+12 : [ -0.247234    0.479191   -0.0336098  ]
+13 : [ -0.0367271   0.110256   -0.37687    ]
+14 : [ -0.0955894   0.109122   -0.198754   ]
+15 : [  0.47362     0.161637    0.384483   ]
+16 : [ -0.684734    0.332084   -0.167726   ]
+17 : [ -1.46295     0.94204     0.61189    ]
+18 : [ -0.426726   -1.5375     -2.4067     ]
+19 : [  0.647229   -0.65616    -0.751611   ]
+20 : [ -0.247234   -0.455335    1.86038    ]
+21 : [ -0.0367271   1.72546    -0.543405   ]
+22 : [ -0.0955894  -0.508206   -2.25867    ]
+23 : [  0.47362    -0.31468    -1.78274    ]
+24 : [ -0.465482    0.0611157  -0.167726   ]
+25 : [  3.01263    -0.318786    0.61189    ]
+26 : [  0.611715   -1.89234    -2.4067     ]
+27 : [  0.662936    0.00370249 -0.751611   ]
+28 : [  0.438177    0.479191    1.86038    ]
+29 : [  0.219721    0.110256   -0.543405   ]
+30 : [ -0.736749    0.109122   -2.25867    ]
+31 : [ -0.5964      0.161637   -1.78274    ]
+32 : [ -0.465482    0.332084    0.87372    ]
+33 : [  3.01263     0.94204     1.26314    ]
+34 : [  0.611715   -1.5375     -0.514391   ]
+35 : [  0.662936   -0.65616     0.729688   ]
+36 : [  0.438177   -0.455335   -0.0336098  ]
+37 : [  0.219721    1.72546    -0.37687    ]
+38 : [ -0.736749   -0.508206   -0.198754   ]
+39 : [ -0.5964     -0.31468     0.384483   ]
+40 : [ -0.465482    0.0611157   0.87372    ]
+41 : [  3.01263    -0.318786    1.26314    ]
+42 : [  0.611715   -1.89234    -0.514391   ]
+43 : [  0.662936    0.00370249  0.729688   ]
+44 : [  0.438177    0.479191   -0.0336098  ]
+45 : [  0.219721    0.110256   -0.37687    ]
+46 : [ -0.736749    0.109122   -0.198754   ]
+47 : [ -0.5964      0.161637    0.384483   ]
+48 : [ -0.684734    0.332084    0.87372    ]
+49 : [ -1.46295     0.94204     1.26314    ]
+50 : [ -0.426726   -1.5375     -0.514391   ]
+51 : [  0.647229   -0.65616     0.729688   ]
+52 : [ -0.247234   -0.455335   -0.0336098  ]
+53 : [ -0.0367271   1.72546    -0.37687    ]
+54 : [ -0.0955894  -0.508206   -0.198754   ]
+55 : [  0.47362    -0.31468     0.384483   ]
+56 : [ -0.684734    0.0611157  -0.167726   ]
+57 : [ -1.46295    -0.318786    0.61189    ]
+58 : [ -0.426726   -1.89234    -2.4067     ]
+59 : [  0.647229    0.00370249 -0.751611   ]
+60 : [ -0.247234    0.479191    1.86038    ]
+61 : [ -0.0367271   0.110256   -0.543405   ]
+62 : [ -0.0955894   0.109122   -2.25867    ]
+63 : [  0.47362     0.161637   -1.78274    ]
+size= 64
