@@ -77,6 +77,7 @@
  * #938 (DistributionFactory::buildEstimator to handle Exception)
  * #939 (The help of the getMaximumDegreeStrataIndex method is wrong.)
  * #937 (Small bugs in FunctionalChaosResult::get{Residuals, RelativeErrors})
+ * #941 (Duplicate with SobolIndicesExperiment)
 
 == 1.10 release (2017-11-13) == #release-1.10
 
